[project]
name = "SunsetSettings"
description = "A type-safe, extensible INI-style settings library."
authors = [{ name = "P. Varet", email = "p.varet@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Python 3.10 does not have a Self type, but it is available in the typing_extensions
# module.
dependencies = ["typing_extensions ; python_version=='3.10'"]

[project.urls]
Home          = "https://github.com/pvaret/SunsetSettings"
Documentation = "https://sunsetsettings.readthedocs.io/"

[project.optional-dependencies]
tests = ["coverage[toml]", "pytest", "pytest-cov", "pytest-mock", "pytest-skip-slow"]
docs  = ["sphinx", "sphinx_rtd_theme"]
dev   = ["mypy", "ruff", "ty"]

[build-system]
requires      = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
only-include = ["sunset/", "tests/", "docs/"]

[tool.hatch.build.targets.wheel]
packages = ["sunset"]

[tool.hatch.envs.hatch-test]
# This forces hatch test to use the pytest ini options listed above.
default-args = []

# This makes this environment use the "tests" optional dependencies above. Hatch
# installs its own set by default, but explicit is better than implicit.
features = ["tests"]

# Parallelizes test execution.
parallel = true

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.dev]
# Use this environment for development purposes. I.e. point VSCode to the Python
# interpreter in this environment.

# Add all dev-related dependencies to the dev environment.
features = ["dev", "tests", "docs"]

[tool.hatch.envs.dev.scripts]
check-all = [
    "hatch run hatch-static-analysis:format-check",
    "hatch run hatch-static-analysis:lint-check",
    "hatch run dev:ty check",
    "hatch run dev:mypy",
]

[tool.hatch.envs.docs]
# This makes this environment use the "docs" optional dependencies above.
features = ["docs"]

[tool.hatch.envs.docs.scripts]
html = "make -C ./docs html"

[tool.hatch.envs.hatch-static-analysis]
# Use the version of Ruff that's in our dev environment. Don't add it as a special dependency.
features     = ["dev"]
dependencies = []

# Disable Hatch's custom Ruff defaults so that our linting parameters above are the
# entirety of what is used.
config-path = "none"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vv",
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--doctest-glob=docs/*.rst",
    "--cov",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
# Also measure tests. Helps detect tests that are not properly executed.
source = ["sunset/", "tests/"]

# Measure coverage of conditional branches.
branch = true

# Tag the coverage file names uniquely to avoid conflicts.
parallel = true

[tool.coverage.report]
exclude_also = [
    "^ *\\.\\.\\.$", # Ignore ellipsis lines.
    "^ *pass$",      # Ignore pass lines.
]
omit = ["tests/demos/*.py"]

[tool.mypy]
packages              = ["sunset"]
strict                = true
show_error_context    = true
show_error_code_links = true
pretty                = true

[tool.ruff]
# Use the default line length.
line-length    = 88
extend-exclude = ["docs/"]

[tool.ruff.lint]
# Enable all linting rules by default.
select = ["ALL"]
exclude = ["tests/*"]
ignore = [
    "COM812", # Can confuse the Ruff formatter.
    "ISC001", # Can confuse the Ruff formatter.
    "N802",   # We use camelCase method names.
    "TC006",  # Obsoleted by PEP 563.
    "D",      # Ignore docstring style linting for now. Revisit later.
]

[tool.ruff.format]
# Don't reformat docstrings, for now. Should probably revisit at some point.
docstring-code-format = false
